# pr-decorator

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml
agent/: __init__.py  execute.py  loop.py  models.py  observe.py  plan.py  render.py  validate.py
prompts/: __init__.py  mr_template.txt
tests/: test_execute.py  test_loop.py  test_observe.py  test_plan_validate.py  test_render.py
